feat: Implement interactive 3D tank simulation with keyboard controls

--- a/T1/tanque.html
+++ b/T1/tanque.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Geometric Transformation</title>
-    <link rel="shortcut icon" href="../favicon.ico">
+    <title>Tank War</title>
+    <link rel="shortcut icon" href="../logo.png">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
