--- a/T1/index.html
+++ b/T1/index.html
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">        
-    <script type="module" src="tanque.js"></script>
+    <script type="module" src="index.js"></script>
   </div>
 </body>
 </html>
