feat: implement sound and mute control for the game

--- a/T2/index.html
+++ b/T2/index.html
@@ -20,10 +20,10 @@
       <button id="start-button">Iniciar Jogo</button>
     </div>
 
-    <!-- Tela de Final do Jogo -->
-    <div id="end-screen" style="display: none; text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000; background-color: white; padding: 20px; border-radius: 10px;">
-      <h1>Final do Jogo</h1>
-      <button id="restart-button">Jogar Novamente</button>
+    <!-- Tela de término de jogo -->
+    <div id="end-screen" style="display: none; text-align: center; margin-top: 20%;">
+      <h1>Parabéns! Você venceu o jogo!</h1>
+      <button id="play-again-button">Jogar Novamente</button>
     </div>
 
   <div id="webgl-output">        
