botao som mobile

--- a/T2/index.html
+++ b/T2/index.html
@@ -34,8 +34,8 @@
 
     <div id="joystickWrapper1"></div>
     <div id="buttons_mobile" style="display: none;">
-      <button style="bottom:20px; right: 120px;" id="A" class="video-game-button">A</button>
-      <button style="bottom:20px; right: 20px;" id="shoot-button" class="video-game-button">Shoot</button>
+      <button style="bottom:20px; right: 120px;" id="A" class="video-game-button">S</button>
+      <button style="bottom:20px; right: 20px;" id="shoot-button" class="video-game-button">T</button>
     </div>
 
     <!-- Tela de término de jogo -->
